# ids-concept-drift

./: .gitignore  00_eda.ipynb  03_solution.ipynb  03_solution_ARFs.ipynb  README.md  ids_concept_drift_ARF_new_v2_river.py  pyproject.toml  readme.md  replay_cl.py
archive/: 03_solution.ipynb
archive/results/: results_summary.csv
exp/: 00_eda.ipynb  01_stimulate_CF_full.ipynb  02_stimulate_CF_phases.ipynb  03_solution.ipynb  ids_concept_drift_ARF_new_v2_river_full.py  part2_exp_01_full_train_test.ipynb  part2_exp_02_train_test_periods.ipynb
exp/context/: arf-fy-project.ipynb
scripts/: download_nsl_kdd.py
