[project]
name = "ids-concept-drift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.4.0",
    "notebook>=7.5.3",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy-stubs~=1.17.0",
    "seaborn>=0.11.0",
]
